--- a/Филимонов А. В/Лаба 2/MyComplexGraph/Лаба 2.csproj
+++ b/Филимонов А. В/Лаба 2/MyComplexGraph/Лаба 2.csproj
@@ -59,6 +59,7 @@
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
     <Compile Include="Interface1.cs" />
+    <Compile Include="MyComplex.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserControl1.cs">
